# f1-lakehouse

./: .gitignore  README.md  collect.py  main.py  pyproject.toml  sender.py
data/: 2019_01_R.parquet  2019_02_R.parquet  2019_03_R.parquet  2019_04_R.parquet  2019_05_R.parquet  2019_06_R.parquet  2019_07_R.parquet  2019_08_R.parquet  2019_09_R.parquet  2019_10_R.parquet  2019_11_R.parquet  2019_12_R.parquet  2019_13_R.parquet  2019_14_R.parquet  2019_15_R.parquet  2019_16_R.parquet  2019_17_R.parquet  2019_18_R.parquet  2019_19_R.parquet  2019_20_R.parquet  2019_21_R.parquet  2020_01_R.parquet  2020_02_R.parquet  2020_03_R.parquet  2020_04_R.parquet  2020_05_R.parquet  2020_06_R.parquet  2020_07_R.parquet  2020_08_R.parquet  2020_09_R.parquet  2020_10_R.parquet  2020_11_R.parquet  2020_12_R.parquet  2020_13_R.parquet  2020_14_R.parquet  2020_15_R.parquet  2020_16_R.parquet  2020_17_R.parquet  2021_01_R.parquet  2021_02_R.parquet  (+72 more)
src/: collect.py  sender.py
