[project]
name = "f1-lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "attrs==25.4.0",
    "boto3==1.42.61",
    "botocore==1.42.61",
    "cattrs==25.3.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "contourpy==1.3.0",
    "cryptography==46.0.5",
    "cycler==0.12.1",
    "dotenv==0.9.9",
    "exceptiongroup==1.3.1",
    "fastf1==3.7.0",
    "fonttools==4.60.2",
    "idna==3.11",
    "importlib-resources==6.5.2",
    "jmespath==1.1.0",
    "kiwisolver==1.4.7",
    "matplotlib==3.9.4",
    "msgpack==1.1.2",
    "numpy==2.0.2",
    "packaging==26.0",
    "pandas==2.3.3",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "pyarrow==21.0.0",
    "pycparser==2.23",
    "pyjwt==2.11.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2026.1.post1",
    "rapidfuzz==3.13.0",
    "requests==2.32.5",
    "requests-cache==1.3.1",
    "s3transfer==0.16.0",
    "scipy==1.13.1",
    "signalrcore==1.0.2",
    "six==1.17.0",
    "timple==0.1.8",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "url-normalize==2.2.1",
    "urllib3==1.26.20",
    "websockets==15.0.1",
    "zipp==3.23.0",
]
